# deja

./: Cargo.toml  README.md  RELEASING.md
crates/deja-cli/: Cargo.toml
crates/deja-cli/src/: main.rs  shell.rs
crates/deja-core/: Cargo.toml
crates/deja-core/src/: db.rs  diff.rs  lib.rs  snapshot.rs
crates/deja-term/: Cargo.toml
crates/deja-term/src/: main.rs  pty.rs  term.rs
crates/deja-term/wix/: main.wxs
