[workspace]
resolver = "2"
members = [
    "crates/deja-core",
    "crates/deja-cli",
    "crates/deja-term",
]

[workspace.package]
version = "0.2.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/mohdafwan/deja"
authors = ["mohdafwan"]
homepage = "https://github.com/mohdafwan/deja"

# Config for 'dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true

# Optimized release: chhota + fast single binary (distribution ke liye).
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "unwind"

# dist khud release profile ko inherit karta hai isi profile se.
[profile.dist]
inherits = "release"
