[package]
name = "deja-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Déjà CLI — shell hook mode (init/record/history/show/why)"

[[bin]]
name = "deja"
path = "src/main.rs"

# CLI release artifacts me ship nahi hota — GUI (deja-term) main product hai
# (usme shell-integration built-in hai). CLI sirf dev/hook-mode ke liye.
[package.metadata.dist]
dist = false

[dependencies]
deja-core = { path = "../deja-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
