[package]
name = "deja-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Déjà context engine: command snapshot capture + diff/culprit ranking"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
